[gd_scene load_steps=12 format=2]

[ext_resource path="res://Intro/Background.png" type="Texture" id=1]
[ext_resource path="res://Intro/Player_back.png" type="Texture" id=2]
[ext_resource path="res://Intro/Virus.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player_speech.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Virus_speech.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=6]
[ext_resource path="res://intro.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Player_entering"
tracks/0/type = "value"
tracks/0/path = NodePath("Player_back:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -418.312, 618.188 ), Vector2( 519.338, 618.188 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "player_speech"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Player_speech:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 79.158, 911.118 ), Vector2( 79.158, 392.998 ), Vector2( 79.158, 392.998 ), Vector2( 79.158, 755.343 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Virus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1847.03, 275.49 ), Vector2( 1070.65, 275.49 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "virus_speech"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Virus_speech:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -110.91, -876.584 ), Vector2( -110.91, -277.19 ), Vector2( -110.91, -277.19 ), Vector2( -110.91, -832.56 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 808.252, 361.164 )
scale = Vector2( 0.835229, 0.835229 )
texture = ExtResource( 1 )

[node name="Player_speech" parent="Background" instance=ExtResource( 4 )]

[node name="player_text" type="Label" parent="Background/Player_speech"]
margin_left = -69.4341
margin_top = -77.3121
margin_right = 210.566
margin_bottom = 54.6879
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Virus_speech" parent="Background" instance=ExtResource( 5 )]

[node name="virus_text" type="Label" parent="Background/Virus_speech"]
margin_left = -175.0
margin_top = -83.0
margin_right = 91.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "teen su haigeks"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_back" type="Sprite" parent="."]
position = Vector2( -518.837, 618.188 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Virus" type="Sprite" parent="."]
position = Vector2( 1808.86, 275.49 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Player_entering = SubResource( 1 )
anims/player_speech = SubResource( 2 )
anims/virus_entering = SubResource( 3 )
anims/virus_speech = SubResource( 4 )
