extends Node2D
onready var anim = get_node("AnimationPlayer")
onready var player_text = get_node("Background/Player_speech/player_text")
onready var virus_text = get_node("Background/Virus_speech/virus_text")
func _ready():
	anim.play("Player_entering")
	yield(anim,"animation_finished")
	anim.play("virus_entering")
	yield(anim,"animation_finished")
	player_text.text = tr("P_DIA1")
	anim.play("player_speech")
	yield(anim,"animation_finished")
	virus_text.text = tr("V_DIA1")
	anim.play("virus_speech")
	yield(anim,"animation_finished")
	player_text.text = tr("P_DIA2")
	anim.play("player_speech")
	yield(anim,"animation_finished")
	virus_text.text = tr("V_DIA2")
	anim.play("virus_speech")
	yield(anim,"animation_finished")
	player_text.text = tr("P_DIA3")
	anim.play("player_speech")
	yield(anim,"animation_finished")
	virus_text.text = tr("V_DIA3")
	anim.play("virus_speech")
	yield(anim,"animation_finished")
	get_tree().change_scene("res://Scenes/Main.tscn")

